<resources>
    <string name="app_name">BMI</string>
    <string name="about_me">About me!</string>
    <string name="imperial_units">Imperial units</string>
    <string name="count_button_text">Count BMI</string>
    <string name="weight_kg">Weight [kg]</string>
    <string name="height_cm">Height [cm]</string>
    <string name="weight_lb">Weight [lbs]</string>
    <string name="height_inch">Height [inches]</string>
    <string name="provide_height">Provide height!</string>
    <string name="provide_weight">Provide weight!</string>
    <string name="your_height">Your height</string>
    <string name="your_weight">Your weight</string>
    <string name="unit_lbs">[lbs]</string>
    <string name="unit_inches">[inches]</string>
    <string name="unit_kg">[kg]</string>
    <string name="unit_cm">[cm]</string>

    <string name="underweight_status">UNDERWEIGHT</string>
    <string name="normal_status">NORMAL</string>
    <string name="overweight_status">OVERWEIGHT</string>
    <string name="obese_status">OBESE</string>
    <string name="extremely_obese_status">EXTREMELY OBESE</string>

    <string name="invalid_height_message">Invalid height!</string>
    <string name="invalid_weight_message">Invalid weight!</string>
    <string name="invalid_result_message">BMI is out of the range, are you sure that you provided the right data?</string>

    <string name="underweight_description">
        A BMI of less than 18.5 indicates that you are underweight, so you may need to put on some weight. You are
        recommended to ask your doctor or a dietitian for advice.
    </string>
    <string name="normal_description">
        A BMI of 18.5-24.9 indicates that you are at a healthy weight for your height. By maintaining a healthy weight,
        you lower your risk of developing serious health problems.
    </string>
    <string name="overweight_description">
        A BMI of 25-29.9 indicates that you are slightly overweight. You may be advised to lose some weight for health
        reasons. You are recommended to talk to your doctor or a dietitian for advice.
    </string>
    <string name="obese_description">
        A BMI of 30-34.9 indicates that you are overweight. Your health may be at risk if you do not lose weight. You
        are recommended to talk to your doctor or a dietitian for advice.
    </string>
    <string name="extremely_obese_description">
        A BMI of over 35 indicates that you are heavily overweight.\n\nDoctors use BMI to define severe obesity rather than
        a certain number of pounds or a set weight limit, because BMI factors weight in relation to height.\n\nYour health
        is at risk. In every moment you can get a heart attack or a stroke.\n\nExcessive body weight is associated with
        various diseases and conditions, particularly cardiovascular diseases, diabetes mellitus type 2, obstructive
        sleep apnea, certain types of cancer, osteoarthritis, and asthma. As a result, obesity has been found to reduce
        life expectancy.\n\nYou are strictly recommended to talk to your doctor or a dietitian for advice.\n\nJust
        start thinking about your future!
    </string>

    <string name="author_text_textView_about">I want to mention that the work is still in progress so be ready for unexpected bugs.</string>
    <string name="header_textView_about">I committed this app!</string>
    <string name="author_textView_about">Author:</string>
    <string name="good_luck_textView_about">Good luck!</string>
    <string name="history">History</string>
    <string name="your_bmi_text">Your BMI:</string>
    <string name="info_button_description_main">Button which contains the question mark as image</string>
    <string name="imageView_description_main">Main image</string>
    <string name="height_textView_record">Height:</string>
    <string name="weight_textView_record">Weight:</string>
    <string name="date_textView_record">Date:</string>
    <string name="your_result_description_textView_info">Your result description:</string>
    <string name="it_is_author_s_picture">It is author\'s picture</string>
    <string name="clear_history">Clear history</string>
</resources>
