<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/scrollView2"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp"
            android:fillViewport="true"
            android:layout_marginTop="@dimen/bmi_margin_top_general_layout_8"
            android:layout_marginBottom="@dimen/bmi_margin_bottom_general_layout_8"
            android:layout_marginStart="@dimen/bmi_margin_start_end_general_layout_8"
            android:layout_marginEnd="@dimen/bmi_margin_start_end_general_layout_8"
>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  >
        <TextView
                android:textAlignment="center"
                android:text="@string/author_textView_about"
                android:textSize="@dimen/bmi_text_size_36"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"/>
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:srcCompat="@drawable/pony"
                android:id="@+id/imageView2"
                app:layout_constraintStart_toEndOf="@+id/scrollView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/scrollView2"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/it_is_author_s_picture"/>
        <TextView
                android:layout_marginTop="@dimen/bmi_margin_top_text_viewM"
                android:text="@string/header_textView_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:textAlignment="center"
                android:textSize="@dimen/bmi_text_size_18"/>
        <TextView
                android:text="@string/author_text_textView_about"
                android:layout_marginTop="@dimen/bmi_margin_top_text_viewM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:textAlignment="center"/>
        <TextView
                android:text="@string/good_luck_textView_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:textAlignment="center"
                android:textSize="@dimen/bmi_text_size_36"/>
    </LinearLayout>
</ScrollView>
